<resources>
    <string name="app_name">TestaApp</string>
    <string name="web_client_id">686139746780-saqho5stcpka49ghoe63uca6v055vc0t.apps.googleusercontent.com</string>
    <string name="loading">Loading</string>
    <string name="verifyme_label">Verifyme</string>
    <string name="agent_label">Agent</string>
    <string name="skip_label">SKIP</string>
    <string name="begin_label">BEGIN</string>
    <string name="create_your_account_label">Create your account</string>
    <string name="firstname_label">FIRST NAME</string>
    <string name="lastname_label">LAST NAME</string>
    <string name="phone_label">PHONE</string>
    <string name="registration_no">REGISTRATION NO.</string>
    <string name="type_of_business">TYPE OF BUSINESS</string>
    <string name="business_name">BUSINESS NAME</string>
    <string name="gender_label">GENDER</string>
    <string name="email_label">EMAIL</string>
    <string name="sign_up_label">SIGN UP</string>
    <string name="already_have_an_account_log_in_label">Already have an account? Log In</string>
    <string name="address_label">ADDRESS</string>
    <string name="password_label">PASSWORD</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="login_to_your_account_label">Login to your account</string>
    <string name="login_label">LOGIN</string>
    <string name="don_t_have_an_account_sign_up_label">Don\'t have an account? Sign up</string>
    <string name="forgot_password_label">Forgot password?</string>
    <string name="forgot_password_header_label">Forgot password</string>
    <string name="send_token_label">SEND TOKEN</string>
    <string name="change_password_label">Change Password</string>
    <string name="submit_label">SUBMIT</string>
    <string name="enter_your_token_label">Enter Your Token</string>
    <string name="verify_label">VERIFY</string>
    <string name="label_start_journey">START JOURNEY</string>
    <string name="resend_token_label">Resend Token</string>
    <string name="Successfully_sent_token_label">Successfully sent token</string>
    <string name="please_wait_while_we_resend_token_label">Please wait while we resend the token</string>
    <string name="please_verify_your_identity_label">Please verify your identity</string>
    <string name="identity_number_label">IDENTITY NUMBER</string>
    <string name="identity_type_label">IDENTITY TYPE</string>
    <string name="thank_you_label">Thank You!</string>
    <string name="your_account_has_been_verified_label">Your account has been verified</string>
    <string name="your_account_has_not_been_verified_label">Your account has not been verified</string>
    <string name="your_account_has_not_been_activated_label">Your account has not been activated</string>
    <string name="go_to_dashboard_label">GO TO DASHBOARD</string>
    <string name="oops_label">Oops</string>
    <string name="identity_verification_error">We were unable to validate your identity. This could be that the firstname or lastname you provided during registration do not match the ones on your %1$s. Use the button below to view your profile and ensure that the name shown matches the name on your government issued %2$s. If it does\'nt match, kindly edit them and try verifying your identity again.</string>
    <string name="view_your_profile_label">View YOUR PROFILE</string>
    <string name="identity_types_label">identityTypes</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="maps_label">Map</string>
    <string name="more_label">More</string>
    <string name="your_dashboard_label">YOUR DASHBOARD</string>
    <string name="approved_label">Approved</string>
    <string name="this_week">THIS WEEK</string>
    <string name="verified_addresses">VERIFIED ADDRESSES</string>
    <string name="unapproved_label">UNAPPROVED</string>
    <string name="employment_label">EMPLOYMENT</string>
    <string name="guarantor_label">GUARANTOR</string>
    <string name="please_wait_while_fetch_identity_types_label">Please wait while we fetch identity types</string>
    <string name="fetching_your_account_balance">Fetching your account balance</string>
    <string name="you_seem_offline_label">You seem to be offline</string>
    <string name="you_won_t_be_able_to_verify_verifications_until_you_do_label">You won’t be able to do verifications until you do</string>
    <string name="you_cant_perform_any_verification_yet_label">You can\'t perform verifications yet</string>
    <string name="pending_label">Pending</string>
    <string name="pending_asset_label">Pending</string>
    <string name="verified_label">Verified</string>
    <string name="start_verifying_addresses_label">START VERIFYING ADDRESSES</string>
    <string name="we_seem_to_be_having_issues_connecting_n_with_our_server_label">We seem to be having issues connecting\n  with our server</string>
    <string name="retry_label">RETRY</string>
    <string name="view_all_request_label">View all requests</string>
    <string name="you_have_no_pending_addresses_label">You have no %1$s addresses</string>
    <string name="you_have_no_pending_asset_label">You have no %1$s assets</string>
    <string name="showing_pending_addresses_label">Showing %1$s addresses</string>
    <string name="showing_pending_assets_label">Showing %1$s assets</string>
    <string name="addresses_label">addresses</string>
    <string name="pending_addresses_label">%1$s ADDRESSES</string>
    <string name="pending_assets_label">%1$s ASSETS</string>
    <string name="total_pending_addresses">%1$s %2$s addresses</string>
    <string name="total_pending_assets">%1$s %2$s assets</string>
    <string name="error_fetching_more_addresses_label">Error fetching more latest addresses</string>
    <string name="error_fetching_more_assets_label">Error fetching more latest assets</string>
    <string name="error_cannot_verify_property">This property can not be verified until the schedule date</string>
    <string name="address_details_label">ADDRESS DETAILS</string>
    <string name="client_name_label">CLIENT NAME</string>
    <string name="requestor_label">REQUESTOR</string>
    <string name="assigned_at_label">ASSIGNED AT</string>
    <string name="verified_at_label">VERIFIED AT</string>
    <string name="status_label">STATUS</string>
    <string name="status_label_short">Status</string>
    <string name="date_label_short">Date</string>
    <string name="type_label_short">Type</string>
    <string name="details_label">Details</string>
    <string name="business_details_label">BUSINESS DETAILS</string>
    <string name="due_date_label">Due Date</string>
    <string name="due_date_label_property">DUE IN</string>
    <string name="property_type">TYPE</string>
    <string name="property_price">PRICE</string>
    <string name="reject_label">REJECT</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="reject_property_description_text">You\'re about to reject this property.\n Are you sure about this?</string>
    <string name="reject_address_description_text">You\'re about to reject this address.\n Are you sure about this?</string>
    <string name="verify_address_description_text">You\'re about to submit a verified address.\n Are you sure about this?</string>
    <string name="verify_property_description_text">You\'re about to submit a verified property.\n Are you sure about this?</string>
    <string name="business_verify_address_description_text">You\'re about to submit a verified business address.\n Are you sure about this?</string>
    <string name="unavailable_description_text">You\'re about to go offline. This means you will not be assigned addresses by our team and all your pending addresses will be reassigned to other agents.\n Are you sure about this?</string>
    <string name="successfully_rejected_address">Successfully rejected address</string>
    <string name="successfully_rejected_property">Successfully rejected property</string>
    <string name="error_dialling_number">Error dialling number</string>
    <string name="call_customer_label">Call Customer</string>
    <string name="google_maps_label">Open Maps</string>
    <string name="unable_to_launch_maps_label">Unable to launch maps</string>
    <string name="cant_call_poc">You are not allowed to contact this business</string>
    <string name="progress_label">Progress</string>
    <string name="next_label">NEXT</string>
    <string name="back_label">BACK</string>
    <string name="were_you_able_to_verify_the_address_label">Were you able to verify the address?</string>
    <string name="click_to_upload_pictures_label">Click to take pictures</string>
    <string name="does_he_she_live_there_label">Does He/She live there?</string>
    <string name="is_a_neigbour_available_to_confirm_residency_label">Is a neigbour available to confirm residency?</string>
    <string name="neighbour_s_name_label">NEIGHBOUR’S NAME</string>
    <string name="neighbour_s_phone_number_label">NEIGHBOUR’S PHONE NUMBER</string>
    <string name="neighbour_s_comment_label">NEIGHBOUR’S COMMENT</string>
    <string name="your_verification_has_been_sent_in_for_napproval_label">Your verification will be sent in for \napproval</string>
    <string name="notifications_label">Notifications</string>
    <string name="you_don_t_have_any_notifications_label">You don\'t have any notifications</string>
    <string name="there_are_no_failed_verification_reasons_n_please_contact_support_label">There are no failed verification reasonAddresses.\n Click here to contact support.</string>
    <string name="you_are_about_submitting_a_failed_verification_label">You are about to submit a failed verification</string>
    <string name="please_select_a_reason_label">Please select a reason</string>
    <string name="there_are_no_pending_addresses_near_you_label">There are no pending addresses near you.</string>
    <string name="there_are_no_pending_addresses_near_you_label_filter">There are no addresses matching your filter.</string>
    <string name="location_is_required_to_submit_label">Your location is required to submit verification</string>
    <string name="settings_label">SETTINGS</string>
    <string name="switch_on_location_label">Enable GPS otherwise you won\'t be able to submit verification</string>
    <string name="gps_required">GPS Required</string>
    <string name="location_permission_required">Location Permission Required</string>
    <string name="please_grant_location_access_to_agent">Grant location access otherwise you won\'t be able to submit verification </string>
    <string name="accept_label">ACCEPT</string>
    <string name="profile_label">PROFILE</string>
    <string name="contact_us_label">CONTACT US</string>
    <string name="faq_label">FAQ</string>
    <string name="sign_out_label">SIGN OUT</string>
    <string name="call_us_label">CALL US</string>
    <string name="send_a_mail_label">SEND A MAIL</string>
    <string name="visit_our_office_label">VISIT OUR OFFICE</string>
    <string name="done_label">Done</string>
    <string name="error_accepting_address">Error accepting address</string>
    <string name="email_or_phone_number_label">EMAIL OR PHONE NUMBER</string>
    <string name="password_changed_successfully_label">Password changed successfully</string>
    <string name="filter_by_status_label">Filter by %1$s</string>
    <string name="processing_label">Processing</string>
    <string name="apply_label">Apply</string>
    <string name="could_not_update_address_list_label">Couldn\'t fetch updated address list</string>
    <string name="your_profile_label">YOUR PROFILE</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="your_bio_label">YOUR BIO</string>
    <string name="lga_label">LGA</string>
    <string name="state_of_residence_label">STATE OF RESIDENCE</string>
    <string name="i_accept_the_terms_and_conditions_label">I accept the terms and conditions</string>
</resources>