<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/register_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/start_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="18dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/end_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="18dp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/create_your_account_label"
                    android:textColor="@color/color_green_opaque_DB406522"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@id/start_guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstname_field_layout"
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/firstname_label"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="@id/start_guideline"
                    app:layout_constraintRight_toRightOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/header">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstname_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastname_field_layout"
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_up_top_margin_textinput"
                    android:hint="@string/lastname_label"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="@id/start_guideline"
                    app:layout_constraintRight_toRightOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/firstname_field_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastname_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_field_layout"
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_up_top_margin_textinput"
                    android:hint="@string/phone_label"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="@id/start_guideline"
                    app:layout_constraintRight_toRightOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/lastname_field_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number|phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/gender_field_layout"
                    style="@style/DropdownInputLayoutTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_up_top_margin_textinput"
                    android:hint="@string/gender_label"
                    app:boxStrokeColor="@color/text_input_box_stroke_selector"
                    app:endIconDrawable="@drawable/ic_arrow_down_grey"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="@id/start_guideline"
                    app:layout_constraintRight_toRightOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/phone_field_layout">

                    <AutoCompleteTextView
                        android:id="@+id/gender_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_field_layout"
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_up_top_margin_textinput"
                    android:hint="@string/email_label"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="@id/start_guideline"
                    app:layout_constraintRight_toRightOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/gender_field_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_field_layout"
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_up_top_margin_textinput"
                    android:hint="@string/password_label"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="@id/start_guideline"
                    app:layout_constraintRight_toRightOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/email_field_layout"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/state_field_layout"
                    style="@style/DropdownInputLayoutTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_up_top_margin_textinput"
                    android:hint="@string/state_of_residence_label"
                    app:boxStrokeColor="@color/text_input_box_stroke_selector"
                    app:endIconDrawable="@drawable/ic_arrow_down_grey"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="@id/start_guideline"
                    app:layout_constraintRight_toRightOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/password_field_layout">

                    <AutoCompleteTextView
                        android:id="@+id/state_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lga_field_layout"
                    style="@style/DropdownInputLayoutTheme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sign_up_top_margin_textinput"
                    android:hint="@string/lga_label"
                    app:boxStrokeColor="@color/text_input_box_stroke_selector"
                    app:endIconDrawable="@drawable/ic_arrow_down_grey"
                    app:errorEnabled="true"
                    app:layout_constraintLeft_toLeftOf="@id/start_guideline"
                    app:layout_constraintRight_toRightOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/state_field_layout">

                    <AutoCompleteTextView
                        android:id="@+id/lga_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@={viewModel.lga}" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/terms_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/i_accept_the_terms_and_conditions_label"
                    android:textColor="@color/color_grey_878787"
                    app:layout_constraintLeft_toLeftOf="@+id/start_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/lga_field_layout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signup_button"
                    style="@style/ActionButtonTheme"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/sign_up_label"
                    app:layout_constraintLeft_toLeftOf="@+id/start_guideline"
                    app:layout_constraintRight_toRightOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/terms_checkbox" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/login_link_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@string/already_have_an_account_log_in_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="@+id/start_guideline"
                    app:layout_constraintRight_toRightOf="@id/end_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/signup_button" />
            </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>